--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -33,13 +33,13 @@ jobs:
         env:
           DEBIAN_FRONTEND: noninteractive
         run: |
+          cp ./bashrc ~/.bashrc
+          source ~/.bashrc
           hdiutil create -size 50g -type SPARSE -fs "Case-sensitive HFS+" -volname OpenWrt OpenWrt.sparseimage
           hdiutil attach OpenWrt.sparseimage
-          cp -r ./* /Volumes/OpenWrt
           cd /Volumes/OpenWrt
-          pwd
-          ls -al
-
+          git clone https://github.com/penggwu/lede.git
+          cd lede
           sudo rm -rf /usr/share/dotnet /etc/mysql /etc/php /etc/apt/sources.list.d 
           brew install make gcc grep libfido2 asciidoc docbook gdbm libxml2 pbzip2 autoconf e2fsprogs gettext libxslt pkg-config bash-completion fastjar gnu-getopt libyaml readline binutils findutils gnu-tar lzlib sqlite bison flex gputils openssl wget coreutils gawk intltool ossp-uuid xz
           df -h
