--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -40,12 +40,16 @@ jobs:
           cd /Volumes/OpenWrt
           git clone https://github.com/penggwu/lede.git
           cd lede
+          pwd
           sudo rm -rf /usr/share/dotnet /etc/mysql /etc/php /etc/apt/sources.list.d 
-          brew install make gcc grep libfido2 asciidoc docbook gdbm libxml2 pbzip2 autoconf e2fsprogs gettext libxslt pkg-config bash-completion fastjar gnu-getopt libyaml readline binutils findutils gnu-tar lzlib sqlite bison flex gputils openssl wget coreutils gawk intltool ossp-uuid xz
+          brew install make
+          make -v
           df -h
+          
 
       - name: Update feeds
         run: |
+          pwd
           sed -i '' 's/#src-git helloworld/src-git helloworld/g' ./feeds.conf.default
           ./scripts/feeds update -a
           ./scripts/feeds install -a
