--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -59,6 +59,8 @@ jobs:
         run: |
           cd /Volumes/OpenWrt/lede
           pwd
+          cat ~/.bashrc
+          source ~/.bashrc
           make -v
           make defconfig
 
