--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -51,6 +51,8 @@ jobs:
         run: |
           cd /Volumes/OpenWrt/lede
           pwd
+          source ~/.bashrc
+          make -v
           sed -i '' 's/#src-git helloworld/src-git helloworld/g' ./feeds.conf.default
           ./scripts/feeds update -a
           ./scripts/feeds install -a
@@ -68,6 +70,8 @@ jobs:
         run: |
           cd /Volumes/OpenWrt/lede
           pwd
+          source ~/.bashrc
+          make -v
           make download -j8
           find dl -size -1024c -exec rm -f {} \;
 
@@ -75,6 +79,8 @@ jobs:
         run: |
           cd /Volumes/OpenWrt/lede
           pwd
+          source ~/.bashrc
+          make -v
           make -j$(nproc) || make -j1 V=s
           echo "======================="
           echo "Space usage:"
